[build-system]
build-backend = "cmeel.build"
requires = ["cmeel[build]"]

[project]
description = "yaml-cpp distribution for cmeel packages"
license = "MIT"
name = "cmeel-yaml-cpp"
requires-python = ">= 3.7"
version = "0.7.0"

[project.urls]
homepage = "https://github.com/cmake-wheel/cmeel-yaml-cpp"
repository = "https://github.com/cmake-wheel/cmeel-yaml-cpp.git"

[tool.cmeel]
py3-none = true
source = "yaml-cpp"

[tool.tomlsort]
all = true
